examples/legacy/invalid_scl/unbound_1.scl
rel path(a, c) = edge(a, b)
